--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
-    "redux-devtools": "^3.4.1"
+    "enzyme-adapter-react-16": "^1.1.1",
+    "redux-devtools": "^3.4.1",
+    "redux-mock-store": "^1.4.0"
   }
 }
